--- a/styles/styles.css
+++ b/styles/styles.css
@@ -997,7 +997,7 @@ main .customer-speak .default-content-wrapper .button-container .button{
     margin-top: 0;
   }
 
-main .get-more-from-bank-wapper .default-content-wrapper .get-more-from-your-bank{
+main .get-more-from-bank-wapper .default-content-wrapper #get-more-from-your-bank{
     color:white;
     font-size:23px;
 }
