--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1001,6 +1001,7 @@ main .get-more-from-bank-wapper .default-content-wrapper #get-more-from-your-ban
     color:white;
     font-size:23px;
     margin-bottom:10px;
+    margin-left: -15px;
 }
   
   
