--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -197,7 +197,7 @@ main .carousel div.carousel-text p:nth-child(1) {
   .hero-section-wrapper .carousel-wrapper .carousel div .carousel-image picture {
     position: absolute;
     z-index: 0;
-    top: 10px;
+    top: 0;
     left: 0;
     bottom: 0;
     right: 0;
