--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1000,7 +1000,7 @@ main .customer-speak .default-content-wrapper .button-container .button{
 main .get-more-from-bank-wapper .default-content-wrapper #get-more-from-your-bank{
     color:white;
     font-size:23px;
-    
+    margin: 0px 0px 20px -14px;
 }
   
   
