--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,7 +472,8 @@ main .get-more-from-bank-wapper .default-content-wrapper .button-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px;
+    text-align: center;
+    margin: 25px 0 0 0;
 }
 
 main .get-more-from-bank-wapper .default-content-wrapper .button-container .button{
