--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -103,7 +103,9 @@ main .carousel div.carousel-text p:nth-child(1) {
     background-color: var(--highlight-background-color);
   }
   
-  
+  main .section.hero-section-wrapper .carousel-wrapper .carousel{
+    height: 255px;
+  }
   .hero-section-wrapper .carousel-wrapper {
     margin: auto;
     max-width: none;
