--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -44,6 +44,8 @@ main .carousel div.carousel-text p:nth-child(1) {
 /*     margin: 10px 0 16px; */
     line-height: 1.2;
     font-size: 24px;
+    padding:0px;
+    margin:0px;
   }
   
   main .carousel div.carousel-text p:nth-child(2) {
@@ -52,6 +54,8 @@ main .carousel div.carousel-text p:nth-child(1) {
     font-size: 14px;
     color:#464646;
     max-width:250px;
+    padding:0px;
+    margin:0px;
   }
   
   main .carousel div.carousel-text h2 {
