--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -19,7 +19,7 @@ Fmain .carousel-container {
     width: 100%;
     height: 100%;
     object-position: 90%;
-    margin-top:50px;
+    margin-bottom:50px;
   }
     
   main .carousel > div {
