--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -46,7 +46,7 @@ main .carousel div.carousel-text p:nth-child(1) {
     line-height: 1.2;
     font-size: 24px;
     padding:0px;
-    margin:0px;
+    margin:0px 0px 15px 0px;
   }
   
   main .carousel div.carousel-text p:nth-child(2) {
