--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -47,6 +47,7 @@ main .carousel div.carousel-text p:nth-child(1) {
     font-size: 24px;
     padding:0px;
     margin:0px 0px 15px 0px;
+    line-height: 22px;
   }
   
   main .carousel div.carousel-text p:nth-child(2) {
