--- a/styles/styles.css
+++ b/styles/styles.css
@@ -368,8 +368,7 @@ main .section.secondary-nav-section-wrapper {
     border-radius: 24px;
     /* padding: 24px 15px 15px 15px; */
     max-width: 1230px;
-
-
+    margin-bottom:32px;
 }
 
 .section.get-more-from-bank-wapper.carousel-container {
