--- a/styles/styles.css
+++ b/styles/styles.css
@@ -652,6 +652,10 @@ main .customer-speak .default-content-wrapper .button-container .button{
     margin-left: 5px;
 }
 
+.section.get-more-from-bank-wapper.carousel-container .carousel-wrapper .carousel {
+    height: 165px;
+}
+
 
 
 
