--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1017,3 +1017,7 @@ main .get-more-from-bank-wapper .default-content-wrapper #get-more-from-your-ban
 .get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(3){
     display : none
 }
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(4){
+    display : none
+}
