--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1021,3 +1021,18 @@ main .get-more-from-bank-wapper .default-content-wrapper #get-more-from-your-ban
 .get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(4){
     display : none
 }
+
+.get-more-from-bank-wapper .carousel-wrapper {
+    position: relative;
+}
+
+
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(1) {
+    position: absolute;
+    left: -38px;
+    top: -90px;
+    background: white;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+    transform: translateY(-50%);
+}
