--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1047,3 +1047,25 @@ main .get-more-from-bank-wapper .default-content-wrapper #get-more-from-your-ban
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
     transform: translateY(-50%);
 }
+
+
+.get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(1):before {
+    content: "";
+    border: solid var(--idfc-red);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    border-radius: 0;
+}
+.get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(2):before {
+    content: "";
+    border: solid var(--idfc-red);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    border-radius: 0;
+}
