--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -98,6 +98,10 @@ main .carousel div.carousel-text p:nth-child(1) {
     -webkit-transform: rotate(135deg);
     border-radius: 0;
   }
+main .hero-section-wrapper .carousel-wrapper .carousel-buttons button{
+    background-color: white;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+}
   main .get-more-from-bank-wapper .carousel-wrapper .carousel-buttons {
     text-align: center;
     margin-top: 0;
