--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1087,5 +1087,6 @@ main div:nth-child(5) .default-content-wrapper p{
     color: white;
     font-size: 23px;
     font-weight: 500;
+margin-top : 3px;
 
 }
