--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -345,6 +345,11 @@ main .hero-section-wrapper .carousel-wrapper .carousel-buttons button{
 }
 
 
+@media screen and (max-width: 768px){
+    
+}
+
+
 
       
   
