--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -553,6 +553,8 @@ header nav a:any-link {
     #enjoy-zero-charges-on-28-commonly-used-savings-account-services {
         font-size: 18px;
         line-height: 1.3;
+        margin: 46px 10px 0px 0px;
+        font-size: 20px;
     }
 
     main .section.hero-section-wrapper {
