--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -351,6 +351,16 @@ main .hero-section-wrapper .carousel-wrapper .carousel-buttons button{
             width: 200px;
             height: 225px;
       }
+
+    main .hero-section-wrapper .carousel-wrapper .carousel-buttons{
+        margin-top: 0;
+        position: absolute;
+        display: flex;
+        right: 30px;
+        left: 0;
+        justify-content: right;
+        bottom: 10px;
+    }
 }
 
 
