--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1093,6 +1093,8 @@ margin-top : 3px;
 
 
 
+
+
 @media  (max-width:600px){
     .get-more-from-bank-wapper .carousel-wrapper .carousel > div {
         width: 99.5%;
@@ -1108,7 +1110,7 @@ margin-top : 3px;
      display: none;
     }
     
-    .get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(1):before {
+    .get-more-from-bank-wapper .carousel-wrapper .carousel-buttons button:nth-child(1) {
         display: none;
     }
     
