--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,6 +374,9 @@ box-shadow: 0px 4px 8px rgba(37, 36, 59, 0.1);
   margin-bottom:32px;
 }
 
+.hero-section-wrapper .carousel-wrapper .carousel .carousel-text {
+  left: 390px;
+}
 .section.get-more-from-bank-wapper.carousel-container {
   /* padding-top: 28px; */
   margin-top: 32px;
