--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,7 +333,7 @@ color: #FFFFFF;
 display: inline-block;
 padding: 0 15px 0 46px;
 white-space: nowrap;
-min-height:25px
+height:25px
 }
 
 .secondary-nav-section-wrapper .default-content-wrapper ul:nth-child(2) li a:any-link {
