--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,7 +294,7 @@ padding: 0 18px;
 color: var(--idfc-red);
 white-space: nowrap;
 cursor: pointer;
- height:25px
+min-height:25px
 }
 
 .secondary-nav-section-wrapper .default-content-wrapper ul li ul {
