--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,7 +275,7 @@ margin: 0;
 padding: 0;
 align-items: center;
 height: 100%;
-min-height:50px;
+/* min-height:50px; */
 }
 
 .secondary-nav-section-wrapper .default-content-wrapper {
