--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,14 @@ header .nav-wrapper {header nav .nav-sections .nav-drop::after
   position: fixed;
 }
 
+@media screen and (max-width: 768px){
+    main .section.secondary-nav-section-wrapper {
+        display: none;
+    }
+
+}
+
+
 header nav {
   box-sizing: border-box;
   display: grid;
