--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1238,5 +1238,16 @@ h2#get-more-from-your-bank {
         font-size: 20px;
     }
 
+.hero-section-wrapper .carousel-wrapper .carousel .carousel-text {
+    position: absolute;
+    top: 0;
+    display: block;
+    /* right: 400px; */
+    background: transparent;
+    color: white;
+    max-width: 47%;
+    left: 200px;
+}
+
 }
 
