--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,6 +10,10 @@ header .nav-wrapper {header nav .nav-sections .nav-drop::after
     main .section.secondary-nav-section-wrapper {
         display: none;
     }
+.section.in-the-spotlight-wrapper {
+   width: 330px;
+   height: 460px;
+}
 
 }
 
