--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -408,6 +408,12 @@ main .hero-section-wrapper .carousel-wrapper .carousel-buttons button{
       padding-left: 10px;
       width: 100%;
     }
+
+
+  h2#a-world-class-bank-in-india {
+        font-size: 20px;
+        line-height: 1.2;
+    }
     
 }
 
