--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1238,12 +1238,12 @@
           font-size: 20px;
       }
   
-  
+/*   
   .section.in-the-spotlight-wrapper {
      width: 330px;
      height: 460px;
   }
-  
+   */
   #guided-by-ethics-powered-by-technology-and-a-force-for-social-good {
       font-size: 16px;
   }
