--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -179,7 +179,7 @@ main .hero-section-wrapper .carousel-wrapper .carousel-buttons button{
   .hero-section-wrapper .carousel-wrapper .carousel div .carousel-image picture img {
     max-width: 100%;
     width: auto;
-    height: auto;
+    height: 250px;
   }
 
 .hero-section-wrapper .carousel-wrapper .carousel div:nth-child(2) .carousel-image picture img {
