--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -254,7 +254,7 @@ main .hero-section-wrapper .carousel-wrapper .carousel-buttons button{
   .hero-section-wrapper .carousel-wrapper .carousel div .carousel-image picture img {
     max-width: 100%;
     width: auto;
-    height: auto;
+   height: 250px;
   }
   
   .carousel div.carousel-text {
